@@ -282,7 +282,11 @@ Point is left at the end of the arguments."
   "Intelligently backslash the character occurring in STRING at INDEX.
 If the character is itself a backslash, it needs no escaping."
   (let ((char (aref string index)))
-    (if (eq char ?\\)
+    (if (and (eq char ?\\) 
+	     (not (and (featurep 'mswindows)
+		       (eq directory-sep-char ?\\)
+		       (eq (1- (string-width string))
+			   index))))
 	(char-to-string char)
       (if (memq char eshell-special-chars-outside-quoting)
 	  (string ?\\ char)))))
